Added details view skeleton

--- a/CES2013/res/values/strings.xml
+++ b/CES2013/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="title_section_tv">Shows</string>
     <string name="image">image</string>
     <string name="show_metadata">Action | 1h 54m </string>
-	<string name="related">Related</string>
-    
+    <string name="related">Related</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section1">Section 1</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_details">DetailsActivity</string>
+
 </resources>
