--- a/CES2013/res/values/strings.xml
+++ b/CES2013/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CES2013</string>
+    <string name="app_name">DigiTV</string>
     <string name="menu_settings">Settings</string>
     <string name="title_section_featured">HOME</string>
     <string name="title_section_movies">Movies</string>
